vercel deploy success

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
-  "buildCommand": "npm install --no-optional && npm run build",
+  "buildCommand": "npm_config_platform=linux npm_config_arch=x64 npm_config_libc=glibc npm install && npm run build",
   "framework": "vite",
   "outputDirectory": "dist",
-  "installCommand": "npm install --no-optional",
-  "build": {
-    "env": {
-      "NODE_ENV": "production",
-      "ROLLUP_SKIP_NODE_RESOLVE": "true"
-    }
-  }
+  "installCommand": "npm install --platform=linux --arch=x64"
 }
